images dispalyed in collectionview

--- a/IMGallery/Base.lproj/Main.storyboard
+++ b/IMGallery/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="160" height="147"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rmw-i3-hgg">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rmw-i3-hgg" customClass="FLAnimatedImageView">
                                                     <rect key="frame" x="0.0" y="0.0" width="160" height="147"/>
                                                 </imageView>
                                             </subviews>
