--- a/IMGallery/Base.lproj/Main.storyboard
+++ b/IMGallery/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Imgur Viral -->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="IMGallery" customModuleProvider="target" sceneMemberID="viewController">
@@ -67,14 +67,44 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="jSD-Jq-MSU"/>
+                    <navigationItem key="navigationItem" title="Imgur Viral " id="jSD-Jq-MSU"/>
                     <connections>
                         <outlet property="imageCollectionView" destination="AMC-KH-IV1" id="Hi6-pg-4Rb"/>
+                        <segue destination="Dj8-gc-bRB" kind="show" identifier="toImageVC" id="1xd-Hl-JHU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="868" y="-565.27093596059115"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="vN1-8k-2rs">
+            <objects>
+                <viewController id="Dj8-gc-bRB" customClass="ImageViewController" customModule="IMGallery" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TFq-pY-Okz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5T1-Bt-2ES" customClass="FLAnimatedImageView">
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="PRE-Fo-Wpz" firstAttribute="bottom" secondItem="5T1-Bt-2ES" secondAttribute="bottom" id="Lqg-Iw-Zxy"/>
+                            <constraint firstItem="5T1-Bt-2ES" firstAttribute="top" secondItem="PRE-Fo-Wpz" secondAttribute="top" id="RSC-3w-2DT"/>
+                            <constraint firstItem="5T1-Bt-2ES" firstAttribute="leading" secondItem="PRE-Fo-Wpz" secondAttribute="leading" id="hnF-mJ-hYq"/>
+                            <constraint firstItem="PRE-Fo-Wpz" firstAttribute="trailing" secondItem="5T1-Bt-2ES" secondAttribute="trailing" id="vf3-Fr-jMd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="PRE-Fo-Wpz"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="5T1-Bt-2ES" id="b3q-Ff-bjp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Imt-Hd-jcd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1612" y="-565"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="k4r-OP-S4u">
